--- a/style.css
+++ b/style.css
@@ -38,7 +38,10 @@ button:hover{
 }
 
 .footer{
-    position: fixed;
+    position:fixed;
+    text-align: center;
+    margin:auto;
+    width:100%;
     bottom: 0; 
 
 }
